<resources>
    <string name="app_name">Punto de venta</string>
    <string name="title_activity_principal">principalActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_inventory">Inventario</string>
    <string name="title_order">Pedidos</string>
    <string name="title_sync">Sincronizar</string>
    <string name="title_option">Opciones</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Ingresar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="versions"></string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
