<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/inventory"
        android:title="@string/title_inventory" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/order"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_songs"
        android:icon="@drawable/sync"
        android:title="@string/title_sync" />

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/options"
        android:title="@string/title_option" />

</menu>
